# ShockChat

./: .gitignore  README.md  Treaty.md
client/: hello.cpp
client/UserClient/ShockChat_Qt/: CMakeLists.txt  Definations.hpp  Message.cpp  Message.hpp  ShockChat_Qt_zh_CN.ts  crypto.cpp  crypto.h  data.hpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  netthread.cpp  netthread.hpp  registerwindow.cpp  registerwindow.hpp  registerwindow.ui
client/UserClient/ShockChat_Qt/protos/: Friend.pb.cc  Friend.pb.h  LegalCheck.pb.cc  LegalCheck.pb.h  Message.pb.cc  Message.pb.h  Normal.pb.cc  Normal.pb.h  Register.pb.cc  Register.pb.h  User.pb.cc  User.pb.h  UserLogin.pb.cc  UserLogin.pb.h  token.pb.cc  token.pb.h
client/UserClient/ShockChat_go/: go.mod
client/protos/: Normal.pb.cc  User.pb.cc  User.pb.h
server/: go.mod  go.sum  main.go  private.pem  public.pem  shockchat.sql
server/conf/: InitConfig.go  copyright.txt  logo.txt  zinx.json
server/hook/: ConnHook.go
server/logger/: logger.go
server/modules/terminal/: README.md  command.go  terminal.go
server/modules/terminal/funcs/: GetFunc.go
server/protos/: Friend.pb.go  Friend.proto  LegalCheck.pb.go  LegalCheck.proto  Message.pb.go  Message.proto  Normal.pb.go  Normal.proto  Register.pb.go  Register.proto  User.pb.go  User.proto  UserLogin.pb.go  UserLogin.proto  protobuf_init.ps1  token.pb.go  token.proto
server/router/: Friend.go  LegalCheck.go  Register.go  UserLogin.go
server/template/: sendnumber.html
server/test/: TestRsa.go  main_test.go
server/utils/: ConnTimer.go  Email.go  Global.go  Password.go  Riddle.go  Rsa.go  Salt.go  Token.go  md5.go
server/utils/mongodb/: MongoDBInit.go  SendMessage.go  SendMessageMgDB.go
server/utils/mysql/: Domains.go  Mysql.go  MysqlInit.go  RegisterDB.go  UserLoginDB.go
server/utils/redis/: Redis.go
